--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^1.4.0",
     "bootstrap": "^5.0.2",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
