--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dscatalog
 spring.datasource.username=postgres
-spring.datasource.password=1234567
+spring.datasource.password=j32014D@
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
